// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApTroubleShooting should render correctly with out search params 1`] = `
<DocumentFragment>
  <div
    class="ant-row"
    style="margin: -8px -8px -8px -8px;"
  >
    <div
      class="ant-col ant-col-18"
      style="padding: 8px 8px 8px 8px;"
    >
      <div
        class="ant-row"
        style="margin: -8px -8px -8px -8px;"
      >
        <div
          class="ant-col ant-col-12"
          style="padding: 8px 8px 8px 8px;"
        />
        <div
          class="ant-col ant-col-12"
          style="padding: 8px 8px 8px 8px; justify-content: end;"
        >
          <div
            class="ant-row"
            style="margin: -2px -2px -2px -2px; justify-content: end;"
          >
            <div
              class="ant-col ant-col-8"
              style="padding: 2px 2px 2px 2px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-jlwno5-0 cLnUfA ant-select-multiple ant-select-allow-clear ant-select-show-search"
                style="max-width: 132px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="ant-select-selection-placeholder"
                  >
                    All Categories
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-8"
              style="padding: 2px 2px 2px 2px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-jlwno5-0 cLnUfA ant-select-multiple ant-select-allow-clear ant-select-show-search"
                style="max-width: 132px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="ant-select-selection-placeholder"
                  >
                    All Types
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-8"
              style="padding: 2px 2px 2px 2px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-jlwno5-0 cLnUfA ant-select-multiple ant-select-allow-clear ant-select-show-search"
                style="max-width: 132px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="ant-select-selection-placeholder"
                  >
                    All Radios
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-24"
          style="padding: 8px 8px 8px 8px;"
        >
          <div
            class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless ant-collapse-ghost"
          >
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  Connection Events
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  Roaming
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  Connection Quality
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  Network Incidents
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-6"
      style="padding: 8px 8px 8px 8px;"
    >
      <div
        class="styledComponents__History-sc-d21xu8-0 bFNQbS"
      >
        <div
          class="styledComponents__HistoryHeader-sc-d21xu8-1 enVlng"
        >
          <span
            class="styledComponents__HistoryContentTitle-sc-d21xu8-3 blbFlC"
          >
            History
          </span>
          <span
            class="styledComponents__HistoryIcon-sc-d21xu8-4 fsiBwN"
          >
            <svg
              data-testid="ArrowExpand"
              style="transform: rotate(180deg); cursor: pointer; line-height: 20px;"
            />
          </span>
        </div>
        <div
          class="styledComponents__HistoryContent-sc-d21xu8-2 dEgEIn"
        >
          <div
            class="ant-list ant-list-split"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <ul
                  class="ant-list-items"
                >
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__EventTypeIcon-sc-d21xu8-5 eHnlOO"
                          color="--acx-semantics-green-50"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Infrastructure (Service availabilty)
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__EventTypeIcon-sc-d21xu8-5 fswVjn"
                          color="--acx-neutrals-50"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Client assiocated (802.11) @ Home_R860 (AA:BB...
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__EventTypeIcon-sc-d21xu8-5 eHnlOO"
                          color="--acx-semantics-green-50"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Client assiocated (802.11) @ Home_R860 (AA...
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ApTroubleShooting should render correctly with search params 1`] = `
<DocumentFragment>
  <div
    class="ant-row"
    style="margin: -8px -8px -8px -8px;"
  >
    <div
      class="ant-col ant-col-18"
      style="padding: 8px 8px 8px 8px;"
    >
      <div
        class="ant-row"
        style="margin: -8px -8px -8px -8px;"
      >
        <div
          class="ant-col ant-col-12"
          style="padding: 8px 8px 8px 8px;"
        />
        <div
          class="ant-col ant-col-12"
          style="padding: 8px 8px 8px 8px; justify-content: end;"
        >
          <div
            class="ant-row"
            style="margin: -2px -2px -2px -2px; justify-content: end;"
          >
            <div
              class="ant-col ant-col-8"
              style="padding: 2px 2px 2px 2px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-jlwno5-0 cLnUfA ant-select-multiple ant-select-allow-clear ant-select-show-search"
                style="max-width: 132px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      aria-hidden="true"
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-rest"
                      style="opacity: 0; height: 0px; overflow-y: hidden; order: 9007199254740991; pointer-events: none; position: absolute;"
                    >
                      <span
                        class="ant-select-selection-item"
                        title="+ 1 ..."
                      >
                        <span
                          class="ant-select-selection-item-content"
                        >
                          + 1 ...
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-clear"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="close-circle"
                    class="anticon anticon-close-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-col ant-col-8"
              style="padding: 2px 2px 2px 2px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-jlwno5-0 cLnUfA ant-select-multiple ant-select-allow-clear ant-select-show-search"
                style="max-width: 132px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="ant-select-selection-placeholder"
                  >
                    All Types
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-8"
              style="padding: 2px 2px 2px 2px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-jlwno5-0 cLnUfA ant-select-multiple ant-select-allow-clear ant-select-show-search"
                style="max-width: 132px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="ant-select-selection-placeholder"
                  >
                    All Radios
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-24"
          style="padding: 8px 8px 8px 8px;"
        >
          <div
            class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless ant-collapse-ghost"
          >
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  Connection Events
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  Roaming
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  Connection Quality
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  Network Incidents
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-6"
      style="padding: 8px 8px 8px 8px;"
    >
      <div
        class="styledComponents__History-sc-d21xu8-0 bFNQbS"
      >
        <div
          class="styledComponents__HistoryHeader-sc-d21xu8-1 enVlng"
        >
          <span
            class="styledComponents__HistoryContentTitle-sc-d21xu8-3 blbFlC"
          >
            History
          </span>
          <span
            class="styledComponents__HistoryIcon-sc-d21xu8-4 fsiBwN"
          >
            <svg
              data-testid="ArrowExpand"
              style="transform: rotate(180deg); cursor: pointer; line-height: 20px;"
            />
          </span>
        </div>
        <div
          class="styledComponents__HistoryContent-sc-d21xu8-2 dEgEIn"
        >
          <div
            class="ant-list ant-list-split"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <ul
                  class="ant-list-items"
                >
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__EventTypeIcon-sc-d21xu8-5 eHnlOO"
                          color="--acx-semantics-green-50"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Infrastructure (Service availabilty)
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__EventTypeIcon-sc-d21xu8-5 fswVjn"
                          color="--acx-neutrals-50"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Client assiocated (802.11) @ Home_R860 (AA:BB...
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__EventTypeIcon-sc-d21xu8-5 eHnlOO"
                          color="--acx-semantics-green-50"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Client assiocated (802.11) @ Home_R860 (AA...
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ApTroubleShooting should set search param on option selection 1`] = `
<DocumentFragment>
  <div
    class="ant-row"
    style="margin: -8px -8px -8px -8px;"
  >
    <div
      class="ant-col ant-col-18"
      style="padding: 8px 8px 8px 8px;"
    >
      <div
        class="ant-row"
        style="margin: -8px -8px -8px -8px;"
      >
        <div
          class="ant-col ant-col-12"
          style="padding: 8px 8px 8px 8px;"
        />
        <div
          class="ant-col ant-col-12"
          style="padding: 8px 8px 8px 8px; justify-content: end;"
        >
          <div
            class="ant-row"
            style="margin: -2px -2px -2px -2px; justify-content: end;"
          >
            <div
              class="ant-col ant-col-8"
              style="padding: 2px 2px 2px 2px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-jlwno5-0 cLnUfA ant-select-multiple ant-select-allow-clear ant-select-show-search"
                style="max-width: 132px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      aria-hidden="true"
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-rest"
                      style="opacity: 0; height: 0px; overflow-y: hidden; order: 9007199254740991; pointer-events: none; position: absolute;"
                    >
                      <span
                        class="ant-select-selection-item"
                        title="+ 0 ..."
                      >
                        <span
                          class="ant-select-selection-item-content"
                        >
                          + 0 ...
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="position: absolute; top: 0px; left: 0px; width: 100%;"
                >
                  <div>
                    <div
                      class="ant-select-dropdown ant-cascader-dropdown ant-select-dropdown-hidden"
                      style="min-width: auto; pointer-events: none;"
                    >
                      <div>
                        <div
                          class="ant-cascader-menus"
                        >
                          <ul
                            class="ant-cascader-menu"
                            role="menu"
                          >
                            <li
                              aria-checked="false"
                              class="ant-cascader-menu-item"
                              data-path-key="connection"
                              role="menuitemcheckbox"
                              title="Client Connection"
                            >
                              <span
                                class="ant-cascader-checkbox"
                              >
                                <span
                                  class="ant-cascader-checkbox-inner"
                                />
                              </span>
                              <div
                                class="ant-cascader-menu-item-content"
                              >
                                Client Connection
                              </div>
                            </li>
                            <li
                              aria-checked="true"
                              class="ant-cascader-menu-item"
                              data-path-key="performance"
                              role="menuitemcheckbox"
                              title="Performance"
                            >
                              <span
                                class="ant-cascader-checkbox ant-cascader-checkbox-checked"
                              >
                                <span
                                  class="ant-cascader-checkbox-inner"
                                />
                              </span>
                              <div
                                class="ant-cascader-menu-item-content"
                              >
                                Performance
                              </div>
                            </li>
                            <li
                              aria-checked="false"
                              class="ant-cascader-menu-item"
                              data-path-key="Infrastructure"
                              role="menuitemcheckbox"
                              title="Infrastructure"
                            >
                              <span
                                class="ant-cascader-checkbox"
                              >
                                <span
                                  class="ant-cascader-checkbox-inner"
                                />
                              </span>
                              <div
                                class="ant-cascader-menu-item-content"
                              >
                                Infrastructure
                              </div>
                            </li>
                          </ul>
                        </div>
                        <div
                          class="styledComponents__ButtonDiv-sc-jlwno5-1 bPKlWZ"
                        >
                          <button
                            class="ant-btn ant-btn-default ant-btn-sm styledComponents__Button-sc-zk1lj8-0 iHTOeV"
                            type="button"
                          >
                            <span>
                              Cancel
                            </span>
                          </button>
                          <button
                            ant-click-animating-without-extra-node="false"
                            class="ant-btn ant-btn-primary ant-btn-sm styledComponents__Button-sc-zk1lj8-0 kkpPZG"
                            type="button"
                          >
                            <span>
                              Apply
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-clear"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="close-circle"
                    class="anticon anticon-close-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="ant-col ant-col-8"
              style="padding: 2px 2px 2px 2px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-jlwno5-0 cLnUfA ant-select-multiple ant-select-allow-clear ant-select-show-search"
                style="max-width: 132px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="ant-select-selection-placeholder"
                  >
                    All Types
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-8"
              style="padding: 2px 2px 2px 2px;"
            >
              <div
                class="ant-select ant-cascader styledComponents__Cascader-sc-jlwno5-0 cLnUfA ant-select-multiple ant-select-allow-clear ant-select-show-search"
                style="max-width: 132px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="ant-select-selection-placeholder"
                  >
                    All Radios
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-24"
          style="padding: 8px 8px 8px 8px;"
        >
          <div
            class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless ant-collapse-ghost"
          >
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  Connection Events
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  Roaming
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  Connection Quality
                </span>
              </div>
            </div>
            <div
              class="ant-collapse-item"
            >
              <div
                aria-expanded="false"
                class="ant-collapse-header"
                role="button"
                tabindex="0"
              >
                <div
                  class="ant-collapse-expand-icon"
                >
                  <svg
                    class="ant-collapse-arrow"
                    data-testid="PlusSquareOutlined"
                  />
                </div>
                <span
                  class="ant-collapse-header-text"
                >
                  Network Incidents
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-6"
      style="padding: 8px 8px 8px 8px;"
    >
      <div
        class="styledComponents__History-sc-d21xu8-0 bFNQbS"
      >
        <div
          class="styledComponents__HistoryHeader-sc-d21xu8-1 enVlng"
        >
          <span
            class="styledComponents__HistoryContentTitle-sc-d21xu8-3 blbFlC"
          >
            History
          </span>
          <span
            class="styledComponents__HistoryIcon-sc-d21xu8-4 fsiBwN"
          >
            <svg
              data-testid="ArrowExpand"
              style="transform: rotate(180deg); cursor: pointer; line-height: 20px;"
            />
          </span>
        </div>
        <div
          class="styledComponents__HistoryContent-sc-d21xu8-2 dEgEIn"
        >
          <div
            class="ant-list ant-list-split"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <ul
                  class="ant-list-items"
                >
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__EventTypeIcon-sc-d21xu8-5 eHnlOO"
                          color="--acx-semantics-green-50"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Infrastructure (Service availabilty)
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__EventTypeIcon-sc-d21xu8-5 fswVjn"
                          color="--acx-neutrals-50"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Client assiocated (802.11) @ Home_R860 (AA:BB...
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <span
                          class="styledComponents__EventTypeIcon-sc-d21xu8-5 eHnlOO"
                          color="--acx-semantics-green-50"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          06/07/2022 11:21:48
                        </h4>
                        <div
                          class="ant-list-item-meta-description"
                        >
                          Client assiocated (802.11) @ Home_R860 (AA...
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
